umol-models-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@reaxys_12616923_20260113_042634_817.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidCountsLine
    message: Invalid counts line at line 75
molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: InvalidCountsLine
    message: Invalid counts line at line 75
extended_molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidCountsLine
    message: Invalid counts line at line 75
extended_molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: InvalidCountsLine
    message: Invalid counts line at line 75
